# THESIS_DAO

./: .gitattributes  .gitignore  404.html  README.md  asset-manifest.json  index.html
.github/workflows/: deploy.yml
chatbot-backend/: Modelfile  main.py  readme.md  requirements.txt  train.py  training_data.json
dao-member-registry/: package-lock.json  package.json  server.js
dao-member-registry/models/: Activity.js  Member.js  TeamMember.js
dao-member-registry/routes/: activities.js  members.js  team.js
hello-near/: Cargo.toml
hello-near/src/: dao.rs  events.rs  lib.rs  storage.rs
near-react-frontend/: .env.production  config-overrides.js  package-lock.json  package.json  tailwind.config.js
near-react-frontend/public/: index.html
near-react-frontend/src/: App.js  index.css  index.js  near.js  wallet.js
smart-contract/src/: ft_core.rs  internal.rs  lib.rs  metadata.rs  proposal.rs
static/css/: main.47efc862.css  main.47efc862.css.map  main.55d81d6c.css  main.55d81d6c.css.map  main.61c39f4f.css  main.61c39f4f.css.map  main.7bc9670b.css  main.7bc9670b.css.map  main.99de5b79.css  main.99de5b79.css.map  main.a3fae093.css  main.a3fae093.css.map  main.bb6ac001.css  main.bb6ac001.css.map  main.c59b70ce.css  main.c59b70ce.css.map  main.e2c4f19b.css  main.e2c4f19b.css.map
static/js/: main.03009f8e.js  main.05c69691.js  main.05d7ccff.js  main.064f0a18.js  main.095b4a99.js  main.0e3010aa.js  main.1d7262f1.js  main.25e76aaa.js  main.3d2c4c87.js  main.4f2669b7.js  main.5275f57e.js  main.59012f06.js  main.66c03eca.js  main.6b917202.js  main.7ccfe887.js  (+8 more)
(+32 files in other folders)
